# OpenRV

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  cliff.toml  conanfile.py  openrvcore-conanfile.py  release-please-config.json  requirements.txt  rvcmds.bat  rvcmds.cmd  rvcmds.ps1  rvcmds.sh
.github/workflows/: build-deps.yml  checklist.yml  checklist_execute.yml  ci-linux.yml  ci-macos.yml  ci-windows.yml  ci.yml  conan.yml  detect-checkbox.yml  pr-check.yml  pr-checklist.yml  pr-status.yml  release-pr.yml  release.yml  test.yml  testing.yml  wt.yml
cmake/defaults/: CYCOMMON.cmake  cxx_msvc_defaults.cmake  rv_options.cmake  rv_targets.cmake
cmake/dependencies/: CMakeLists.txt  atomic_ops.cmake  boost.cmake  dav1d.cmake  dav1d3.cmake  ffmpeg.cmake  gc.cmake  imath.cmake  imath3.cmake  imgui.cmake  jpegturbo.cmake  jpegturbo3.cmake  libdeflate.cmake  nanobind.cmake  ocio.cmake  oiio.cmake  openexr.cmake  openjpeg.cmake  openjph.cmake  openssl.cmake  pcre2.cmake  pyimgui.cmake  pyimplot.cmake  python.cmake  python3.cmake  qt6.cmake  raw.cmake  spdlog.cmake  template.cmake  tiff.cmake  vcpkg-raw.cmake  vcpkg.json  webp.cmake  zlib.cmake
cmake/dependencies/imgui/: CMakeLists.txt
cmake/install/: install.cmake  pre_install.cmake  pre_install_darwin.cmake  pre_install_linux.cmake  pre_install_windows.cmake
cmake/macros/: lotool.sh  rv_copy_lib_bin_folders.cmake  rv_create_soname_symlink.cmake  rv_create_std_deps_vars.cmake  rv_lex.cmake  rv_sed.cmake  (+4 more)
conan/: README.md
dockerfiles/: Bk  Dockerfile.Windows-CY2024
git-cliff/: CHANGELOG.md
(+129 files in other folders)
